Fixed overflow issue

--- a/style_v3.css
+++ b/style_v3.css
@@ -1,6 +1,4 @@
 :root {
-
-
     --salmon: #FF8474; 
     --comp-1: #FCAC57;
     --comp-1-hover: #FDBE89; 
@@ -39,8 +37,19 @@
     src: url("fonts/Montserrat-Medium.otf");
 }
 
-html, body, main {
-    height: 100%;
+html, body {
+    overflow-x: hidden;  
+    overflow-y: auto; /* Ensure smooth vertical scrolling */
+    min-height: 100%; /* Ensure the body stretches to the full height */
+}
+
+body {
+    display: flex;
+    flex-direction: column;
+}
+
+main {
+    flex: 1;
     overflow-x: hidden;  
 }
 
@@ -115,7 +124,6 @@ h4 {
     margin-left: 2rem; 
 }
 
-
 .nav-container {
     display: flex;
     justify-content: space-between;
@@ -139,32 +147,31 @@ h4 {
     font-size: clamp(1.25rem, 0.603rem + 4.138vw, 2rem);
 }
 
-.nav ul {
+nav ul {
     display: flex;
     list-style-type: none;
 }
 
-.nav ul li {
+nav ul li {
     margin-left: 20px;
     min-width: 72px; 
 }
 
-.nav ul li a {
+nav ul li a {
     text-decoration: none;
     color: #333; /* Example color */
     font-weight: bold;
 }
 
-.nav a:hover {
+nav a:hover {
     transition: color 0.3s; 
     color: #FE23E2; 
 }
 
-
 /* Section 1 */ 
 
 .landing {
-    height: calc(100vh - 65px);
+    min-height: calc(100vh - 65px); /* Ensure it occupies full viewport height */
     font-family: "Source Sans 3", sans-serif; 
 }
 
@@ -173,6 +180,7 @@ h4 {
     width: 100%; 
     height: 100%;
     padding-bottom: 42px; 
+    flex-grow: 1;
 }
 
 .landing .column-1 {
@@ -182,7 +190,7 @@ h4 {
     background-size: cover;
     background-color: var(--background);
     width: 70%;
-    height: 100%; 
+    flex-grow: 1; /* Make it stretch */
 }
 
 .landing .column-2 {
@@ -191,7 +199,7 @@ h4 {
     align-items: center; 
     margin-top: 3rem;
     width: 50%; 
-    height: 100%; 
+    flex-grow: 1; /* Make it stretch */
 }
 
 .yew-branch {
@@ -308,7 +316,7 @@ h4 {
     font-size: 27rem;  
     position: absolute;
     left: -12.5%;
-    z-index: 0; 
+    z-index: -1; 
 }
 
 
